Allow enabling debug output via environment variables.

--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -496,7 +496,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  make
         bahamut
       timeout-minutes: 30
@@ -535,7 +537,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH   make
         bahamut-anope
       timeout-minutes: 30
@@ -568,7 +572,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  make
         bahamut-atheme
       timeout-minutes: 30
@@ -601,7 +607,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  make
         charybdis
       timeout-minutes: 30
@@ -641,7 +649,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=~/go/sbin:~/go/bin:~/go:$PATH
         make ergo
       timeout-minutes: 30
@@ -680,7 +690,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH   make
         hybrid
       timeout-minutes: 30
@@ -713,7 +725,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH
         make inspircd
       timeout-minutes: 30
@@ -752,7 +766,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH  make
         inspircd-anope
       timeout-minutes: 30
@@ -785,7 +801,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:~/.local/inspircd:$PATH
         make inspircd-atheme
       timeout-minutes: 30
@@ -835,7 +853,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  make
         irc2
       timeout-minutes: 30
@@ -874,7 +894,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  make
         ircu2
       timeout-minutes: 30
@@ -901,7 +923,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  make
         limnoria
       timeout-minutes: 30
@@ -939,7 +963,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  make
         nefarious
       timeout-minutes: 30
@@ -972,7 +998,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH
         make ngircd
       timeout-minutes: 30
@@ -1011,7 +1039,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH  make
         ngircd-anope
       timeout-minutes: 30
@@ -1044,7 +1074,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:~/.local/:$PATH
         make ngircd-atheme
       timeout-minutes: 30
@@ -1083,7 +1115,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH   make
         plexus4
       timeout-minutes: 30
@@ -1130,7 +1164,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=$GITHUB_WORKSPACE/sable/target/debug/sbin:$GITHUB_WORKSPACE/sable/target/debug/bin:$GITHUB_WORKSPACE/sable/target/debug:$PATH
         make sable
       timeout-minutes: 30
@@ -1163,7 +1199,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  make
         solanum
       timeout-minutes: 30
@@ -1190,7 +1228,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  make
         sopel
       timeout-minutes: 30
@@ -1228,7 +1268,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  make
         thelounge
       timeout-minutes: 30
@@ -1261,7 +1303,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
         make unrealircd
       timeout-minutes: 30
@@ -1294,7 +1338,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
         make unrealircd-5
       timeout-minutes: 30
@@ -1333,7 +1379,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH  make
         unrealircd-anope
       timeout-minutes: 30
@@ -1366,7 +1414,9 @@ jobs:
       run: |-
         python -m pip install --upgrade pip
         pip install pytest pytest-xdist pytest-timeout -r requirements.txt
-    - name: Test with pytest
+    - env:
+        IRCTEST_DEBUG: ${{ runner.debug }}
+      name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:~/.local/unrealircd:$PATH
         make unrealircd-atheme
       timeout-minutes: 30
